--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -17,6 +17,9 @@ GCC_0902_ORIGIN		:= /pub/GIT-ORIGIN/gcc.git
 GCC_0902_VERSION	:= gcc-9_2_0-release
 GCC_0902_BRANCH		:= dadao-0902
 GCC_0902_TARGET		:= dadao-linux-elf
+
+GCC_0902_PATCHES	:= $(DIR_DADAO_TCH)/gcc-0902-patches
+
 GCC_0902_WORKING	:= $(DIR_BUILD_TCH)/gcc-0902
 GCC_0902_INSTALL	:= $(DIR_BUILD_TCH)/__gcc-0902
 GCC_0902_BUILDLOG	:= $(DIR_BUILD_TCH)/buildlog-gcc-0902
@@ -31,6 +34,7 @@ gcc-0902-new:
 	@echo "Copy gcc/config/dadao dir"
 	@cp -a $(DIR_DADAO_TCH)/gcc/config/* $(GCC_0902_WORKING)/gcc/config/
 	@cd $(GCC_0902_WORKING); git add gcc/config/dadao; git commit -sm"DADAO: add gcc/config/dadao dir"
+	@cd $(GCC_0902_WORKING); git am $(GCC_0902_PATCHES)/*.patch
 
 gcc-0902-make:
 	@echo "Remove old gcc buildlog ..."
