--- a/DADAO-sim/Makefile.DADAO-sim
+++ b/DADAO-sim/Makefile.DADAO-sim
@@ -17,6 +17,9 @@ QEMU_0401_ORIGIN	:= /pub/GIT-ORIGIN/qemu.git
 QEMU_0401_VERSION	:= v4.1.0
 QEMU_0401_BRANCH	:= dadao-0401
 QEMU_0401_TARGETS	:= dadao-softmmu
+
+QEMU_0401_NEWFILES	:= $(DIR_DADAO_SIM)/qemu-0401-newfiles
+
 QEMU_0401_WORKING	:= $(DIR_BUILD_SIM)/qemu-0401
 QEMU_0401_INSTALL	:= $(DIR_BUILD_SIM)/__qemu-0401
 QEMU_0401_BUILDLOG	:= $(DIR_BUILD_SIM)/buildlog-qemu-0401
@@ -29,10 +32,10 @@ qemu-0401-new:
 	@git clone $(QEMU_0401_ORIGIN) -- $(QEMU_0401_WORKING)
 	@cd $(QEMU_0401_WORKING); git checkout -b $(QEMU_0401_BRANCH) $(QEMU_0401_VERSION)
 	@echo "Copy target/dadao dir"
-	@cp -a $(DIR_DADAO_SIM)/target/* $(QEMU_0401_WORKING)/target/
+	@cp -a $(QEMU_0401_NEWFILES)/target/* $(QEMU_0401_WORKING)/target/
 	@cd $(QEMU_0401_WORKING); git add target/dadao; git commit -sm"DADAO: add target/dadao dir"
 	@echo "Copy config file"
-	@cp -a $(DIR_DADAO_SIM)/default-configs/* $(QEMU_0401_WORKING)/default-configs/
+	@cp -a $(QEMU_0401_NEWFILES)/default-configs/* $(QEMU_0401_WORKING)/default-configs/
 	@cd $(QEMU_0401_WORKING); git add default-configs; git commit -sm"DADAO: add dadao-softmmu.mak"
 
 qemu-0401-make:
