TCH-gcc: add --enable-werror to configure
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -50,6 +50,7 @@ gcc-0902-conf:
 		--disable-nls						\
 		--enable-languages=c					\
 		--enable-checking					\
+		--enable-werror						\
 		--without-headers			>> $(GCC_0902_BUILDLOG) 2>&1
 
 gcc-0902-make:
