--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -115,6 +115,11 @@ binutils-gdb-0233-new:
 	@cd $(BINUTILS_GDB_0233_WORKING);				\
 		git add gas/config;					\
 		git commit -sm"DADAO: add gas/config related files"
+	@echo "Copy opcodes dir"
+	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/opcodes/* $(BINUTILS_GDB_0233_WORKING)/opcodes/
+	@cd $(BINUTILS_GDB_0233_WORKING);				\
+		git add opcodes;					\
+		git commit -sm"DADAO: add opcodes related files"
 	@echo "Copy include dir"
 	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/include/* $(BINUTILS_GDB_0233_WORKING)/include
 	@cd $(BINUTILS_GDB_0233_WORKING);				\
