SIM-qemu: add qemu-0401-patches/0001-DADAO-configure-add-dadao-support.patch
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-sim/Makefile.DADAO-sim
+++ b/DADAO-sim/Makefile.DADAO-sim
@@ -46,6 +46,8 @@ qemu-0401-new:
 	@cd $(QEMU_0401_WORKING);					\
 		git add default-configs;				\
 		git commit -sm"DADAO: add dadao-softmmu.mak"
+	@echo "Apply qemu-0401-patches ..."
+	@cd $(QEMU_0401_WORKING); git am $(QEMU_0401_PATCHES)/*.patch
 
 qemu-0401-conf:
 	@echo "Configure qemu ..."
