--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -95,7 +95,7 @@ gcc-0902-highfive:
 BINUTILS_GDB_0233_ORIGIN		:= $(DIR_GIT_TAO)/binutils-gdb.git
 BINUTILS_GDB_0233_VERSION		:= binutils-2_33_1
 BINUTILS_GDB_0233_BRANCH		:= dadao-0233
-BINUTILS_GDB_0233_TARGET		:= dadao-linux-gnu
+BINUTILS_GDB_0233_TARGET		:= dadao-linux-elf
 
 BINUTILS_GDB_0233_NEWFILES		:= $(DIR_DADAO_TCH)/binutils-gdb-0233-newfiles
 BINUTILS_GDB_0233_PATCHES		:= $(DIR_DADAO_TCH)/binutils-gdb-0233-patches
