Makefile: introduce BINUTILS_GDB_0233_BUILD
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -101,6 +101,7 @@ BINUTILS_GDB_0233_NEWFILES		:= $(DIR_DADAO_TCH)/binutils-gdb-0233-newfiles
 BINUTILS_GDB_0233_PATCHES		:= $(DIR_DADAO_TCH)/binutils-gdb-0233-patches
 
 BINUTILS_GDB_0233_WORKING		:= $(DIR_BUILD_TCH)/binutils-gdb-0233
+BINUTILS_GDB_0233_BUILD			:= $(DIR_DADAO_BUILD)/binutils-gdb-0233
 BINUTILS_GDB_0233_INSTALL		?= $(DIR_BUILD_TCH)/__binutils-gdb-0233
 BINUTILS_GDB_0233_LOG_STDOUT		:= $(DIR_BUILD_TCH)/_log-stdout-binutils-gdb-0233
 BINUTILS_GDB_0233_LOG_STDERR		:= $(DIR_BUILD_TCH)/_log-stderr-binutils-gdb-0233
@@ -147,15 +148,18 @@ binutils-gdb-0233-new:
 	@cd $(BINUTILS_GDB_0233_WORKING); git am $(BINUTILS_GDB_0233_PATCHES)/*.patch
 
 binutils-gdb-0233-conf:
-	@cd $(BINUTILS_GDB_0233_WORKING) && ./configure			\
-		--target=$(BINUTILS_GDB_0233_TARGET)			\
-		--prefix=$(BINUTILS_GDB_0233_INSTALL)
+	@test -d $(BINUTILS_GDB_0233_BUILD) || mkdir -p $(BINUTILS_GDB_0233_BUILD)
+	@cd $(BINUTILS_GDB_0233_BUILD) &&				\
+		$(BINUTILS_GDB_0233_WORKING)/configure			\
+			--target=$(BINUTILS_GDB_0233_TARGET)		\
+			--srcdir=$(BINUTILS_GDB_0233_WORKING)		\
+			--prefix=$(BINUTILS_GDB_0233_INSTALL)
 
 binutils-gdb-0233-make:
-	@make -C $(BINUTILS_GDB_0233_WORKING) -j8
+	@make -C $(BINUTILS_GDB_0233_BUILD) -j8
 
 binutils-gdb-0233-install:
-	@make -C $(BINUTILS_GDB_0233_WORKING) install
+	@make -C $(BINUTILS_GDB_0233_BUILD) install
 
 binutils-gdb-0233-highfive:
 	@echo "BEGIN TO BUILD binutils-gdb-0233!"
